--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "@types/inquirer": "^7.3.1",
     "@types/lodash": "^4.14.169",
     "@types/minimist": "^1.2.1",
-    "@types/node": "^15.12.2",
+    "@types/node": "^16.0.0",
     "@types/semver": "^7.3.6",
     "@types/validate-npm-package-name": "^3.0.2",
+    "@types/webpack-node-externals": "^2.5.1",
     "@types/yargs": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
@@ -48,6 +49,8 @@
     "minimist": "^1.2.5",
     "semver": "^7.3.5",
     "typescript": "^4.3.4",
-    "validate-npm-package-name": "^3.0.0"
+    "validate-npm-package-name": "^3.0.0",
+    "webpack": "^5.41.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
