--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lodash": "^4.17.21",
     "minimist": "^1.2.5",
     "semver": "^7.3.5",
+    "string-argv": "^0.3.1",
     "typescript": "^4.3.4",
     "validate-npm-package-name": "^3.0.0",
     "webpack": "^5.41.1",
